--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'io.objectbox'
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -34,6 +34,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
+    implementation 'com.github.f0ris.sweetalert:library:1.5.3'
+    implementation 'com.iamhabib:easy-preference:1.0.1'
+    implementation 'com.github.Denive:EasyAdapter:1.0.0'
+
     //
 
     //noinspection GradleCompatible
@@ -49,6 +53,8 @@ dependencies {
     //prueba
 
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
