--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.objectboxVersion = '1.5.0'
     repositories {
+        mavenCentral()
         google()
         jcenter()
+
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath "io.objectbox:objectbox-gradle-plugin:$objectboxVersion"
+
+
 
         
 
@@ -20,6 +25,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://jitpack.io' }
         google()
         jcenter()
     }
