--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,16 @@
         </activity>
         <activity android:name=".SignUpActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".MenuActivity" />
 
         <activity
             android:name=".Drawler"
             android:label="@string/title_activity_drawler"
             android:theme="@style/AppTheme" />
+        <activity android:name=".VisualizarCategoria"></activity>
         <activity android:name=".CrearReceta" />
         <activity android:name=".VisualizarReceta"></activity>
+
+
 
     </application>
 
